--- a/index.html
+++ b/index.html
@@ -81,6 +81,114 @@
         </div>
       </nav>
 
+
+      <!-- Projects Section -->
+    <section class="py-5">
+      <div class="container px-5 mb-5">
+        <div class="text-center mb-5">
+          <h1 class="display-5 fw-bolder mb-0">Projects</h1>
+        </div>
+
+        <!-- PROJECTS GRID -->
+        <!-- Eerste rij met project 1–3 -->
+        <div class="row gx-4 gy-4 mb-5" id="projects-container">
+
+          <!-- Project 1 -->
+          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
+            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('nightracer.html')">
+              <div class="card-img-container">
+                <img src="assets/oldtimer.png" alt="Nightracer" />
+              </div>
+              <div class="p-4">
+                <h2 class="fw-bolder">Nightracer</h2>
+                <div class="mb-2">
+                  <span class="badge bg-secondary">Group</span>
+                  <span class="badge bg-dark">Unity</span>
+                  <span class="badge bg-info text-dark">C#</span>
+                </div>
+                <p>Nightracer is een race game waar je een auto rijd door de nacht, vandaar de naam nightracer, 
+                  en moesten we er voor zorgen dat het belangerijkste onderdeel die er in moet zitten waren de WheelColliders .</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 2 -->
+          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
+            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('GetCooked.html')">
+              <div class="card-img-container">
+                <img src="assets/banner.png" alt="Get Cooked!" />
+              </div>
+              <div class="p-4">
+                <h2 class="fw-bolder">Get Cooked!</h2>
+                <div class="mb-2">
+                  <span class="badge bg-secondary">Group</span>
+                  <span class="badge bg-dark">Unity</span>
+                  <span class="badge bg-info text-dark">C#</span>
+                </div>
+                <p>Een kookspel waarbij je zo snel mogelijk eten moet maken en serveren aan de klanten.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 3 -->
+          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
+            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('Verloren Moeder.html')">
+              <div class="card-img-container">
+                <img src="assets/child.jpg" alt="Verloren Moeder" />
+              </div>
+              <div class="p-4">
+                <h2 class="fw-bolder">Verloren Moeder</h2>
+                <div class="mb-2">
+                  <span class="badge bg-secondary">Group</span>
+                  <span class="badge bg-dark">Unreal</span>
+                  <span class="badge bg-info text-dark">blueprint</span>
+                </div>
+                <p>Een samenwerkingsproject met de filmacademie Amsterdam, waarbij hun verhalen tot games zijn gemaakt wat  .</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Tweede rij met project 4 & 5 gecentreerd -->
+        <div class="row gx-4 gy-4 justify-content-center">
+          <!-- Project 4 -->
+          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
+            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('particle.html')">
+              <div class="card-img-container">
+                <img src="assets/4.gif" alt="Kampvuur" />
+              </div>
+              <div class="p-4">
+                <h2 class="fw-bolder">Kampvuur</h2>
+                <div class="mb-2">
+                  <span class="badge bg-secondary">Solo</span>
+                  <span class="badge bg-dark">Unity</span>
+                  <span class="badge bg-info text-dark">C#</span>
+                </div>
+                <p>Een mini project waar ik ben gaan oefenen aan particles in Unity.</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 5 -->
+          <div class="col-md-6 col-lg-4" data-tags="solo javascript">
+            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('mini-games.html')">
+              <div class="card-img-container">
+                <img src="assets/javascript.png" alt="Mini Games" />
+              </div>
+              <div class="p-4">
+                <h2 class="fw-bolder">Mini Games in JavaScript</h2>
+                <div class="mb-2">
+                  <span class="badge bg-secondary">Solo</span>
+                  <span class="badge bg-warning text-dark">JavaScript</span>
+                </div>
+                <p>Drie leuke mini-games die ik voor mijn website heb gemaakt.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
