--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
     <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <style>
       body {
@@ -27,167 +36,140 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
-
-      .profile {
-        border-radius: 50%;
-        width: 612px;
-        height: 612px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: none;
-        padding: 0;
-      }
-
-      .profile-img {
-        border-radius: 50%;
-        width: 588px;
-        height: 588px;
-        object-fit: cover;
-      }
-
-      /* Responsive: kleiner maken op mobiel */
-      @media (max-width: 768px) {
-        .profile {
-          width: 240px;
-          height: 240px;
-        }
-
-        .profile-img {
-          width: 230px;
-          height: 230px;
-        }
-      }
     </style>
   </head>
+
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
           <a class="navbar-brand fw-bold text-primary" href="#">Gacha Website</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto fw-semibold small">
-              <li class="nav-item mx-3"><a class="nav-link" href="wuthering_waves.html">Wuthering waves</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="genshin.html">Genshin Impact</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="star_rail.html">Honkai Star rail</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="zenless.html">Zenless</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="nikke.html">Nikke</a></li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="wuthering_waves.html">Wuthering Waves</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="genshin.html">Genshin Impact</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="star_rail.html">Honkai Star Rail</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="zenless.html">Zenless</a>
+              </li>
+              <li class="nav-item mx-3">
+                <a class="nav-link" href="nikke.html">Nikke</a>
+              </li>
+               <li class="nav-item mx-3">
+                <a class="nav-link" href="endfield_arknight.html">Endfield: Arknight</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
 
-
       <!-- Projects Section -->
-    <section class="py-5">
-      <div class="container px-5 mb-5">
-        <div class="text-center mb-5">
-          <h1 class="display-5 fw-bolder mb-0">Projects</h1>
-        </div>
-
-        <!-- PROJECTS GRID -->
-        <!-- Eerste rij met project 1–3 -->
-        <div class="row gx-4 gy-4 mb-5" id="projects-container">
-
-          <!-- Project 1 -->
-          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
-            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('nightracer.html')">
-              <div class="card-img-container">
-                <img src="assets/oldtimer.png" alt="Nightracer" />
-              </div>
-              <div class="p-4">
-                <h2 class="fw-bolder">Nightracer</h2>
-                <div class="mb-2">
-                  <span class="badge bg-secondary">Group</span>
-                  <span class="badge bg-dark">Unity</span>
-                  <span class="badge bg-info text-dark">C#</span>
-                </div>
-                <p>Nightracer is een race game waar je een auto rijd door de nacht, vandaar de naam nightracer, 
-                  en moesten we er voor zorgen dat het belangerijkste onderdeel die er in moet zitten waren de WheelColliders .</p>
-              </div>
-            </div>
+      <section class="py-5">
+        <div class="container px-5 mb-5">
+          <div class="text-center mb-5">
+            <h1 class="display-5 fw-bolder mb-0">Projects</h1>
           </div>
 
-          <!-- Project 2 -->
-          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
-            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('GetCooked.html')">
-              <div class="card-img-container">
-                <img src="assets/banner.png" alt="Get Cooked!" />
-              </div>
-              <div class="p-4">
-                <h2 class="fw-bolder">Get Cooked!</h2>
-                <div class="mb-2">
-                  <span class="badge bg-secondary">Group</span>
-                  <span class="badge bg-dark">Unity</span>
-                  <span class="badge bg-info text-dark">C#</span>
-                </div>
-                <p>Een kookspel waarbij je zo snel mogelijk eten moet maken en serveren aan de klanten.</p>
-              </div>
-            </div>
-          </div>
+          <!-- PROJECTS GRID -->
+          <div class="row gx-4 gy-4">
 
-          <!-- Project 3 -->
-          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
-            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('Verloren Moeder.html')">
-              <div class="card-img-container">
-                <img src="assets/child.jpg" alt="Verloren Moeder" />
-              </div>
-              <div class="p-4">
-                <h2 class="fw-bolder">Verloren Moeder</h2>
-                <div class="mb-2">
-                  <span class="badge bg-secondary">Group</span>
-                  <span class="badge bg-dark">Unreal</span>
-                  <span class="badge bg-info text-dark">blueprint</span>
+            <!-- Project 1 -->
+            <div class="col-6 col-lg-4">
+              <div class="card h-100 shadow rounded-4 border-0">
+                <img src="assets/wuwa/1.jpg" class="card-img-top" alt="Wuthering Waves">
+                <div class="p-4">
+                  <h2 class="fw-bolder">Wuthering Waves</h2>
+                  <div class="mb-2">
+                  </div>
+                  <p>Een gacha-tracker voor Wuthering Waves.</p>
                 </div>
-                <p>Een samenwerkingsproject met de filmacademie Amsterdam, waarbij hun verhalen tot games zijn gemaakt wat  .</p>
               </div>
             </div>
-          </div>
-        </div>
 
-        <!-- Tweede rij met project 4 & 5 gecentreerd -->
-        <div class="row gx-4 gy-4 justify-content-center">
-          <!-- Project 4 -->
-          <div class="col-md-6 col-lg-4" data-tags="group unity csharp">
-            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('particle.html')">
-              <div class="card-img-container">
-                <img src="assets/4.gif" alt="Kampvuur" />
-              </div>
-              <div class="p-4">
-                <h2 class="fw-bolder">Kampvuur</h2>
-                <div class="mb-2">
-                  <span class="badge bg-secondary">Solo</span>
-                  <span class="badge bg-dark">Unity</span>
-                  <span class="badge bg-info text-dark">C#</span>
+            <!-- Project 2 -->
+            <div class="col-6 col-lg-4">
+              <div class="card h-100 shadow rounded-4 border-0">
+                <img src="assets/nikke/1.jpg" class="card-img-top" alt="Nikke">
+                <div class="p-4">
+                  <h2 class="fw-bolder">Goddess of Victory: Nikke</h2>
+                  <div class="mb-2">
+                  </div>
+                  <p>Een gacha-tracker voor Goddess of Victory: Nikke.</p>
                 </div>
-                <p>Een mini project waar ik ben gaan oefenen aan particles in Unity.</p>
               </div>
             </div>
-          </div>
 
-          <!-- Project 5 -->
-          <div class="col-md-6 col-lg-4" data-tags="solo javascript">
-            <div class="card overflow-hidden shadow rounded-4 border-0 h-100" onclick="openProject('mini-games.html')">
-              <div class="card-img-container">
-                <img src="assets/javascript.png" alt="Mini Games" />
-              </div>
-              <div class="p-4">
-                <h2 class="fw-bolder">Mini Games in JavaScript</h2>
-                <div class="mb-2">
-                  <span class="badge bg-secondary">Solo</span>
-                  <span class="badge bg-warning text-dark">JavaScript</span>
+            <!-- Project 3 -->
+            <div class="col-6 col-lg-4">
+              <div class="card h-100 shadow rounded-4 border-0">
+                <img src="assets/hsr/1.jpg" class="card-img-top" alt="Honkai Star Rail">
+                <div class="p-4">
+                  <h2 class="fw-bolder">Honkai: Star Rail</h2>
+                  <div class="mb-2">
+                  </div>
+                  <p>Een gacha-tracker voor Honkai Star Rail.</p>
                 </div>
-                <p>Drie leuke mini-games die ik voor mijn website heb gemaakt.</p>
               </div>
             </div>
+
+            <!-- Project 4 -->
+            <div class="col-6 col-lg-4">
+              <div class="card h-100 shadow rounded-4 border-0">
+                <img src="assets/genshin/1.jpg" class="card-img-top" alt="Genshin Impact">
+                <div class="p-4">
+                  <h2 class="fw-bolder">Genshin Impact</h2>
+                  <div class="mb-2">
+                  </div>
+                  <p>Een gacha-tracker voor Genshin Impact.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 5 -->
+            <div class="col-6 col-lg-4">
+              <div class="card h-100 shadow rounded-4 border-0">
+                <img src="assets/zzz/1.jpg" class="card-img-top" alt="Zenless Zone Zero">
+                <div class="p-4">
+                  <h2 class="fw-bolder">Zenless Zone Zero</h2>
+                  <div class="mb-2">
+                  </div>
+                  <p>Een gacha-tracker voor Zenless Zone Zero.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 6 (optioneel leeg / future) -->
+            <div class="col-6 col-lg-4">
+              <div class="card h-100 shadow rounded-4 border-0">
+                <img src="assets/arknight/1.jpg" class="card-img-top" alt="Endfield: Arknight">
+                <div class="p-4">
+                  <h2 class="fw-bolder">Endfield: Arknight</h2>
+                  <div class="mb-2">
+                  </div>
+                  <p>Een gacha-tracker voor Endfield: Arknight.</p>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
