--- a/wuthering_waves.html
+++ b/wuthering_waves.html
@@ -1,87 +1,191 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gacha Website</title>
+<html lang="nl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Wuthering Waves – Gacha Tracker</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <!-- Fonts & Icons -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      background:#0b1020;
+      color:#e7eaf3;
+    }
 
-    <style>
-      body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-      }
+    .tracker-card {
+      background:#0f1730;
+      border:1px solid #2b3357;
+      border-radius:16px;
+      padding:16px;
+      margin-top:16px;
+    }
 
-      .text-gradient {
-        background: linear-gradient(to right, #4e54c8, #8f94fb);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
+    input,select,textarea,button {
+      background:#121a33 !important;
+      color:#e7eaf3 !important;
+      border:1px solid #2b3357 !important;
+      border-radius:10px !important;
+    }
 
-      .profile {
-        border-radius: 50%;
-        width: 612px;
-        height: 612px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: none;
-        padding: 0;
-      }
+    .pill {
+      display:inline-block;
+      padding:4px 10px;
+      border-radius:999px;
+      border:1px solid #2b3357;
+      margin-left:6px;
+      font-size:.8rem;
+    }
 
-      .profile-img {
-        border-radius: 50%;
-        width: 588px;
-        height: 588px;
-        object-fit: cover;
-      }
+    .bar {
+      height:10px;
+      background:#1b2450;
+      border-radius:999px;
+      overflow:hidden;
+    }
+    .bar > div {
+      height:100%;
+      background:#7aa2ff;
+    }
+  </style>
+</head>
 
-      /* Responsive: kleiner maken op mobiel */
-      @media (max-width: 768px) {
-        .profile {
-          width: 240px;
-          height: 240px;
-        }
+<body class="d-flex flex-column h-100">
 
-        .profile-img {
-          width: 230px;
-          height: 230px;
-        }
-      }
-    </style>
-  </head>
-  <body class="d-flex flex-column h-100">
-    <main class="flex-shrink-0">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container px-5">
-          <a class="navbar-brand fw-bold text-primary" href="#">Gacha Website</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto fw-semibold small">
-              <li class="nav-item mx-3"><a class="nav-link" href="wuthering_waves.html">Wuthering waves</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="genshin.html">Genshin Impact</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="star_rail.html">Honkai Star rail</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="zenless.html">Zenless</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="nikke.html">Nikke</a></li>
-            </ul>
-          </div>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+  <div class="container px-5">
+    <a class="navbar-brand fw-bold text-primary" href="index.html">Gacha Website</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto fw-semibold small">
+        <li class="nav-item mx-3"><a class="nav-link active" href="#">Wuthering Waves</a></li>
+        <li class="nav-item mx-3"><a class="nav-link" href="genshin.html">Genshin Impact</a></li>
+        <li class="nav-item mx-3"><a class="nav-link" href="star_rail.html">Honkai Star Rail</a></li>
+        <li class="nav-item mx-3"><a class="nav-link" href="zenless.html">Zenless</a></li>
+        <li class="nav-item mx-3"><a class="nav-link" href="nikke.html">Nikke</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- MAIN -->
+<main class="container py-4">
+
+  <h1 class="fw-bold">Wuthering Waves Tracker</h1>
+  <p class="text-muted">Hou je characters, builds en voortgang bij (lokaal opgeslagen).</p>
+
+  <!-- ADD -->
+  <div class="row g-2">
+    <div class="col-md-4"><input id="name" class="form-control" placeholder="Character naam"></div>
+    <div class="col-md-2">
+      <select id="rarity" class="form-select">
+        <option>5★</option><option>4★</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="owned" class="form-select">
+        <option value="true">Owned</option>
+        <option value="false">Not owned</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <select id="status" class="form-select">
+        <option>Niet begonnen</option>
+        <option>Bezig</option>
+        <option>Af</option>
+        <option>On hold</option>
+      </select>
+    </div>
+    <div class="col-md-2">
+      <button id="add" class="btn btn-primary w-100">+ Add</button>
+    </div>
+  </div>
+
+  <!-- LIST -->
+  <div id="list" class="row mt-4"></div>
+</main>
+
+<script>
+const KEY="ww_tracker_v1";
+const load=()=>JSON.parse(localStorage.getItem(KEY)||"[]");
+const save=d=>localStorage.setItem(KEY,JSON.stringify(d));
+const uid=()=>Math.random().toString(16).slice(2)+Date.now();
+
+function progress(c){
+  const l=(c.level||1)/90;
+  const w=(c.weaponLevel||1)/90;
+  const s=((c.skill1||1)+(c.skill2||1)+(c.skill3||1)+(c.forte||1))/40;
+  return Math.round((l*.4+w*.2+s*.4)*100);
+}
+
+function render(){
+  const list=document.getElementById("list");
+  list.innerHTML="";
+  load().forEach(c=>{
+    const p=progress(c);
+    const col=document.createElement("div");
+    col.className="col-md-6";
+    col.innerHTML=`
+      <div class="tracker-card">
+        <strong>${c.name}</strong>
+        <span class="pill">${c.rarity}</span>
+        <span class="pill">${c.owned?"Owned":"Not owned"}</span>
+
+        <div class="mt-2">
+          Level <input data-k="level" data-id="${c.id}" type="number" min="1" max="90" value="${c.level}">
+          Weapon <input data-k="weaponLevel" data-id="${c.id}" type="number" min="1" max="90" value="${c.weaponLevel}">
         </div>
-      </nav>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+        <div class="mt-2">
+          <div class="bar"><div style="width:${p}%"></div></div>
+          <small>${p}%</small>
+        </div>
+      </div>`;
+    list.appendChild(col);
+  });
+
+  list.querySelectorAll("input").forEach(i=>{
+    i.oninput=()=>{
+      const d=load();
+      const o=d.find(x=>x.id===i.dataset.id);
+      o[i.dataset.k]=Number(i.value||1);
+      save(d);
+      render();
+    }
+  });
+}
+
+document.getElementById("add").onclick=()=>{
+  const name=document.getElementById("name").value.trim();
+  if(!name) return alert("Naam invullen");
+  const d=load();
+  d.push({
+    id:uid(),name,
+    rarity:rarity.value,
+    owned:owned.value==="true",
+    status:status.value,
+    level:1,weaponLevel:1,
+    skill1:1,skill2:1,skill3:1,forte:1
+  });
+  save(d);
+  name.value="";
+  render();
+};
+
+render();
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
