--- a/wuthering_waves.html
+++ b/wuthering_waves.html
@@ -5,124 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Wuthering Waves – Character Tracker</title>
 
+<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<style>
-*{ box-sizing:border-box; }
+<!-- BASIS STYLE -->
+<link rel="stylesheet" href="css/style.css">
 
-body{
-  margin:0;
-  font-family:system-ui;
-  background:#0b1020;
-  color:#ffffff;
-}
-
-/* Forceer witte tekst */
-body,
-.card,
-.card *{
-  color:#ffffff !important;
-}
-
-p{
-  color:#cfd6ff !important;
-}
-
-/* ===============================
-   CARD
-================================ */
-.card{
-  background:#0f1730;
-  border:1px solid #2b3357;
-  border-radius:18px;
-  padding:20px;
-  height:100%;
-}
-
-/* ===============================
-   HEADER
-================================ */
-.char-header{
-  display:flex;
-  gap:20px;
-}
-
-.char-left{
-  width:160px;
-  flex-shrink:0;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-}
-
-.char-img{
-  width:160px;
-  height:160px;
-  object-fit:cover;
-  border-radius:12px;
-}
-
-/* ===============================
-   RESONANCE ICONS
-================================ */
-.chain-icons{
-  display:flex;
-  justify-content:space-between;
-  width:100%;
-  margin-top:12px;
-}
-
-.chain-icon{
-  width:44px;
-  height:44px;
-  opacity:.25;
-  transition:.2s;
-}
-
-.chain-icon.active{
-  opacity:1;
-  filter:drop-shadow(0 0 6px rgba(255,200,120,.6));
-}
-
-.chain-icon.clickable{
-  cursor:pointer;
-}
-
-.chain-icon.clickable:hover{
-  transform:scale(1.15);
-}
-
-.chain-icon.disabled{
-  opacity:.15;
-  cursor:not-allowed;
-}
-
-/* ===============================
-   SKILLS
-================================ */
-.skill-row{
-  display:flex;
-  justify-content:space-between;
-  margin-bottom:6px;
-}
-
-input{
-  background:#121a33!important;
-  color:#ffffff!important;
-  border:1px solid #2b3357!important;
-  border-radius:6px;
-  padding:4px 6px;
-}
-
-/* rarity pill */
-.pill{
-  padding:4px 10px;
-  border-radius:999px;
-  border:1px solid #3a467a;
-  font-size:.75rem;
-  margin-left:6px;
-}
-</style>
+<!-- RESONANCE ICON STYLE -->
+<link rel="stylesheet" href="css/resonanceicons.css">
 </head>
 
 <body class="container-fluid px-4 py-4">
@@ -183,7 +73,7 @@ function render(){
     const owned = d.owned;
 
     const col = document.createElement("div");
-    col.className = "col-12 col-md-6 col-xl-3"; // 4 per rij
+    col.className = "col-12 col-md-6 col-xl-3";
 
     col.innerHTML = `
       <div class="card">
@@ -202,7 +92,7 @@ function render(){
             </div>
           </div>
 
-          <div>
+          <div class="char-info">
             <strong>${c.name}</strong>
             <span class="pill">${c.rarity}</span>
 
