--- a/wuthering_waves.html
+++ b/wuthering_waves.html
@@ -5,24 +5,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Wuthering Waves – Character Tracker</title>
 
-<!-- Bootstrap -->
+<!-- Bootstrap (alleen grid) -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- BASIS STYLE -->
+<!-- Custom CSS -->
 <link rel="stylesheet" href="css/style.css">
-
-<!-- RESONANCE ICON STYLE -->
-<link rel="stylesheet" href="css/resonanceicons.css">
 </head>
 
-<body class="container-fluid px-4 py-4">
+<body>
 
-<h1 class="fw-bold">Wuthering Waves – Character Tracker</h1>
-<p class="mb-4">Resonance icons zijn alleen klikbaar als Owned is aangevinkt.</p>
+<div class="container-fluid px-4 py-4">
+  <h1 class="fw-bold text-white mb-1">Wuthering Waves – Character Tracker</h1>
+  <p class="text-white-50 mb-4">
+    Resonance & weapons zijn alleen klikbaar als Owned is aangevinkt.
+  </p>
 
-<div id="list" class="row g-4"></div>
+  <div id="list" class="row g-4"></div>
+</div>
 
-<!-- CHARACTERS FILE -->
 <script src="js/characters.js"></script>
 
 <script>
@@ -37,7 +37,7 @@ function defaultChar(){
     owned:false,
     level:1,
     chain:0,
-    weapon:0,
+    weapon2:false, // alleen wapen 2 togglebaar
     skills:{ basic:1, skill:1, forte:1, liberation:1, outro:1 }
   };
 }
@@ -48,7 +48,7 @@ function load(){
   CHARACTERS.forEach(c=>{
     if(!d[c.id]) d[c.id] = defaultChar();
   });
-  localStorage.setItem(KEY,JSON.stringify(d));
+  save(d);
   return d;
 }
 
@@ -94,37 +94,30 @@ function render(){
           </div>
 
           <div class="char-info">
-            <strong>${c.name}</strong>
-            <span class="pill">${c.rarity}</span>
+            <div class="char-title">
+              <strong>${c.name}</strong>
+              <span class="pill">${c.rarity}</span>
+
+              <label class="owned">
+                <input type="checkbox" ${owned?'checked':''}
+                  onchange="setOwned('${c.id}',this.checked)">
+                Owned
+              </label>
+            </div>
 
             <div class="mt-2">
               Level
-              <input
-                value="${d.level}"
-                style="width:60px"
+              <input value="${d.level}"
                 oninput="setLevel('${c.id}',this.value)">
             </div>
 
-            <div class="form-check mt-2">
-              <input class="form-check-input"
-                type="checkbox"
-                ${owned?"checked":""}
-                onchange="setOwned('${c.id}',this.checked)">
-              <label class="form-check-label">Owned</label>
-            </div>
-
-            <!-- WEAPON ICONS -->
             ${c.weapons ? `
             <div class="weapon-row">
-              ${c.weapons.map((w,i)=>`
-                <img
-                  src="${w}"
-                  class="weapon-icon ${d.weapon===i+1?'active':''}"
-                  onclick="setWeapon('${c.id}',${i+1})"
-                  onerror="this.style.display='none'">
-              `).join("")}
-            </div>
-            ` : ""}
+              <img src="${c.weapons[0]}" class="weapon-icon active">
+              <img src="${c.weapons[1]}"
+                class="weapon-icon ${d.weapon2?'active':''} ${owned?'clickable':'disabled'}"
+                ${owned?`onclick="toggleWeapon2('${c.id}')"`:''}>
+            </div>` : ``}
           </div>
         </div>
 
@@ -133,9 +126,7 @@ function render(){
         ${Object.entries(d.skills).map(([k,v])=>`
           <div class="skill-row">
             <span>${k}</span>
-            <input
-              value="${v}"
-              style="width:60px"
+            <input value="${v}"
               oninput="setSkill('${c.id}','${k}',this.value)">
           </div>
         `).join("")}
@@ -153,29 +144,29 @@ function setOwned(id,val){
   d[id].owned=val;
   if(!val){
     d[id].chain=0;
-    d[id].weapon=0;
+    d[id].weapon2=false;
   }
+  save(d);
+  render();
+}
+
+function toggleWeapon2(id){
+  const d=load();
+  d[id].weapon2=!d[id].weapon2;
   save(d);
   render();
 }
 
 function setChain(id,val){
   const d=load();
-  d[id].chain = d[id].chain===val ? 0 : val;
-  save(d);
-  render();
-}
-
-function setWeapon(id,val){
-  const d=load();
-  d[id].weapon = d[id].weapon===val ? 0 : val;
+  d[id].chain=d[id].chain===val?0:val;
   save(d);
   render();
 }
 
 function setLevel(id,val){
   const d=load();
-  d[id].level = clamp(val,1,90);
+  d[id].level=clamp(val,1,90);
   save(d);
 }
 
