--- a/wuthering_waves.html
+++ b/wuthering_waves.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- jouw css -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css//wuwa/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
   </div>
 
   <!-- characters data -->
-  <script src="js/characters.js"></script>
+  <script src="js/wuwa/characters.js"></script>
 
   <script>
     const KEY = "ww_tracker_final_v2";
