--- a/star_rail.html
+++ b/star_rail.html
@@ -1,87 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gacha Website</title>
+<html lang="nl">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Wuthering Waves – Character Tracker</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="stylesheet" href="css/hsr/style-hsr.css">
+</head>
 
-    <!-- Fonts & Icons -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;500;700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+<body>
+  <div class="container">
+    <h1 class="page-title">Wuthering Waves – Character Tracker</h1>
+    <p class="page-subtitle">Resonance icons en weapon toggle werken alleen als Owned aan staat.</p>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <div class="tabs" id="tabs">
+      <button class="tab-btn active" data-tab="all">All</button>
+      <button class="tab-btn" data-tab="five">5★</button>
+      <button class="tab-btn" data-tab="four">4★</button>
+      <button class="tab-btn" data-tab="standard">Standard</button>
+      <button class="tab-btn" data-tab="owned">Owned</button>
+      <button class="tab-btn" data-tab="notowned">Not Owned</button>
+    </div>
 
-    <style>
-      body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-      }
+    <div id="list" class="grid" aria-label="Character kaarten"></div>
+  </div>
 
-      .text-gradient {
-        background: linear-gradient(to right, #4e54c8, #8f94fb);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
+  <script src="js/hsr/characters-hsr.js"></script>
 
-      .profile {
-        border-radius: 50%;
-        width: 612px;
-        height: 612px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: none;
-        padding: 0;
-      }
+  <script>
+    const KEY = "hsr_tracker_final_v2";
+    const PLACEHOLDER = "assets/hsr/resonance/placeholder.jpg";
+    let ACTIVE_TAB = "all";
 
-      .profile-img {
-        border-radius: 50%;
-        width: 588px;
-        height: 588px;
-        object-fit: cover;
-      }
+    function defaultChar(){
+      return {
+        owned:false,
+        level:1,
+        chain:0,
+        weaponExtra:false,
+        skills:{ basic:1, skill:1, forte:1, liberation:1, outro:1 }
+      };
+    }
 
-      /* Responsive: kleiner maken op mobiel */
-      @media (max-width: 768px) {
-        .profile {
-          width: 240px;
-          height: 240px;
-        }
+    function load(){
+      const s = localStorage.getItem(KEY);
+      const d = s ? JSON.parse(s) : {};
+      CHARACTERS.forEach(c=>{
+        if(!d[c.id]) d[c.id] = defaultChar();
+      });
+      localStorage.setItem(KEY, JSON.stringify(d));
+      return d;
+    }
 
-        .profile-img {
-          width: 230px;
-          height: 230px;
-        }
-      }
-    </style>
-  </head>
-  <body class="d-flex flex-column h-100">
-    <main class="flex-shrink-0">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container px-5">
-          <a class="navbar-brand fw-bold text-primary" href="#">Gacha Website</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto fw-semibold small">
-              <li class="nav-item mx-3"><a class="nav-link" href="wuthering_waves.html">Wuthering waves</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="genshin.html">Genshin Impact</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="star_rail.html">Honkai Star rail</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="zenless.html">Zenless</a></li>
-              <li class="nav-item mx-3"><a class="nav-link" href="nikke.html">Nikke</a></li>
-            </ul>
+    function save(d){ localStorage.setItem(KEY, JSON.stringify(d)); }
+
+    function clamp(v,min,max){
+      v = Number(v);
+      return isNaN(v) ? min : Math.max(min, Math.min(max, v));
+    }
+
+    function iconError(img){
+      img.onerror=null;
+      img.src=PLACEHOLDER;
+    }
+
+    function passesTab(c, d){
+      if(ACTIVE_TAB === "five" && c.rarity !== "5★") return false;
+      if(ACTIVE_TAB === "four" && c.rarity !== "4★") return false;
+      if(ACTIVE_TAB === "standard" && c.standard !== true) return false;
+      if(ACTIVE_TAB === "owned" && d.owned !== true) return false;
+      if(ACTIVE_TAB === "notowned" && d.owned !== false) return false;
+      return true;
+    }
+
+    function render(){
+      const data = load();
+      const list = document.getElementById("list");
+      list.innerHTML = "";
+
+      CHARACTERS.forEach(c=>{
+        const d = data[c.id];
+        const owned = d.owned;
+        if(!passesTab(c, d)) return;
+
+        const hasWeapons = Array.isArray(c.weapons) && c.weapons.length >= 1;
+
+        const card = document.createElement("div");
+        card.className = `tracker-card ${owned ? "is-owned" : "not-owned"}`;
+
+        card.innerHTML = `
+          <div class="card-top">
+            <img src="${c.image}" class="char-img ${owned ? "" : "dim"}" alt="${c.name}" onerror="this.style.display='none'">
+
+            <div class="right">
+              <div class="header-row">
+                <div>
+                  <div class="char-name">${c.name}</div>
+                  <div class="meta">
+                    <span class="pill">${c.rarity}</span>
+                    ${c.standard ? `<span class="pill pill-standard">Standard</span>` : ``}
+                  </div>
+                </div>
+
+                <label class="owned-inline">
+                  <input type="checkbox" ${owned ? "checked" : ""} onchange="setOwned('${c.id}', this.checked)">
+                  <span>Owned</span>
+                </label>
+              </div>
+
+              <!-- ✅ WEAPONS: groter + gecentreerd -->
+              <div class="mini-row">
+                <div class="mini-box weapon-box ${hasWeapons ? "" : "empty"}">
+                  ${hasWeapons ? `
+                    <img src="${c.weapons[0]}" class="weapon-icon base" title="Weapon type" onerror="this.style.display='none'">
+                    ${c.weapons[1] ? `
+                      <img
+                        src="${c.weapons[1]}"
+                        class="weapon-icon extra ${owned ? "clickable" : "disabled"} ${d.weaponExtra ? "active" : ""}"
+                        title="Extra weapon (toggle)"
+                        ${owned ? `onclick="toggleWeaponExtra('${c.id}')"` : ``}
+                        onerror="this.style.display='none'">
+                    ` : ``}
+                  ` : ``}
+                </div>
+              </div>
+            </div>
+
+            <!-- resonance -->
+            <div class="chain-pill">
+              ${c.icons.map((icon,i)=>`
+                <img
+                  src="${icon}"
+                  class="chain-icon ${d.chain>=i+1 ? "active" : ""} ${owned ? "clickable" : "disabled"}"
+                  ${owned ? `onclick="setChain('${c.id}',${i+1})"` : "" }
+                  onerror="iconError(this)"
+                  alt="Resonance ${i+1}">
+              `).join("")}
+            </div>
+
+            <!-- level -->
+            <div class="level-under">
+              <div class="mini-box level-box">
+                <span class="mini-label">Level</span>
+                <input class="mini-input" value="${d.level}" oninput="setLevel('${c.id}', this.value)">
+              </div>
+            </div>
           </div>
-        </div>
-      </nav>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+          <div class="divider"></div>
+
+          <div class="skills">
+            ${Object.entries(d.skills).map(([k,v])=>`
+              <div class="skill-row">
+                <span class="skill-name">${k}</span>
+                <input class="skill-input" value="${v}" oninput="setSkill('${c.id}','${k}', this.value)">
+              </div>
+            `).join("")}
+          </div>
+        `;
+
+        list.appendChild(card);
+      });
+    }
+
+    function setOwned(id,val){
+      const d = load();
+      d[id].owned = val;
+      if(!val){
+        d[id].chain = 0;
+        d[id].weaponExtra = false;
+      }
+      save(d);
+      render();
+    }
+
+    function setChain(id,val){
+      const d = load();
+      d[id].chain = (d[id].chain === val) ? 0 : val;
+      save(d);
+      render();
+    }
+
+    function toggleWeaponExtra(id){
+      const d = load();
+      d[id].weaponExtra = !d[id].weaponExtra;
+      save(d);
+      render();
+    }
+
+    function setLevel(id,val){
+      const d = load();
+      d[id].level = clamp(val, 1, 90);
+      save(d);
+    }
+
+    function setSkill(id,skill,val){
+      const d = load();
+      d[id].skills[skill] = clamp(val, 1, 10);
+      save(d);
+    }
+
+    document.getElementById("tabs").addEventListener("click", (e)=>{
+      const btn = e.target.closest(".tab-btn");
+      if(!btn) return;
+      document.querySelectorAll(".tab-btn").forEach(b=>b.classList.remove("active"));
+      btn.classList.add("active");
+      ACTIVE_TAB = btn.dataset.tab;
+      render();
+    });
+
+    render();
+  </script>
+</body>
 </html>
